--- a/projects.html
+++ b/projects.html
@@ -6,15 +6,56 @@
     <title>My Projects</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <style>
+        .hover-shadow:hover {
+            transform: translateY(-5px);
+            transition: transform 0.2s ease-in-out;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1) !important;
+        }
+        
+        .card {
+            transition: all 0.2s ease-in-out;
+        }
+    </style>
 </head>
 <body class="bg-light">
 
     <nav class="navbar navbar-dark bg-primary">
         <div class="container">
             <a class="navbar-brand" href="#">My Projects</a>
-            <button class="btn btn-danger" id="logoutBtn">Logout</button>
+            <div>
+                <!-- Add Create Project button -->
+                <button class="btn btn-success me-2" data-bs-toggle="modal" data-bs-target="#createProjectModal">
+                    <i class="fas fa-plus"></i> Create Project
+                </button>
+                <button class="btn btn-danger" id="logoutBtn">Logout</button>
+            </div>
         </div>
     </nav>
+
+    <!-- Add Create Project Modal -->
+    <div class="modal fade" id="createProjectModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Create New Project</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="createProjectForm">
+                        <div class="mb-3">
+                            <label for="projectName" class="form-label">Project Name</label>
+                            <input type="text" class="form-control" id="projectName" required>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" id="createProjectBtn">Create Project</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="container mt-4">
         <h2 class="text-center">Your Projects</h2>
@@ -23,6 +64,10 @@
         </div>
     </div>
 
+    <!-- Add Bootstrap JS and Font Awesome -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="scripts/projects.js"></script>
 </body>
 </html>
